--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,18 +1,14 @@
 <section class="post-comments">
 
 
-    <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-    <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+    <div id="SOHUCS" class="cloud-tie-wrapper"></div>
+    <script charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/changyan.js" ></script>
     <script>
-    var cloudTieConfig = {
-      url: document.location.href, 
-      sourceId: "",
-      productKey: "9fd29cb0f4f94f97acad84ea83861fb3",
-      target: "cloud-tie-wrapper"
-    };
-    var yunManualLoad = true;
-    Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vZXh0ZW5kL2hvdF9uZXdzX3NjcmlwdC5odG1s", true);
-    </script>
+   window.changyan.api.config({
+		appid: 'cyst3gSkv',
+		conf: 'prod_94fc6f8c5efc1f8446ff6a664ff716a6'
+	});
+</script>
 
 
   
